--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Plugs HTML Style Guide</title>
+    <title>Tara HTML Style Guide</title>
 </head>
 <body>
     <header>
@@ -26,8 +26,8 @@
         </nav>
     </header>
     <div class="app">
-        <h1>Plugs</h1>
-        <div class="scrolling-links-container">
+        <h1>Tara Teschke</h1>
+        <!-- <div class="scrolling-links-container">
             <div class="link">
                 <div id="a" class="link-background"></div>
                 <p>Laptops</p>
@@ -40,18 +40,13 @@
                 <div id="c" class="link-background"></div>
                 <p>Tablets</p>
             </div>
-            <!-- <div id="3" class="link">3</div>
-            <div id="4" class="link">4</div> -->
-        </div>
-        <!-- <div class="test-section" >
-            <p>Premium electronics, your way</p>
         </div> -->
         <div class="test-section-two" >
             <p>Different words about electronics and stuff here</p>
         </div>
     </div>
     <footer>
-        <span>made with love by Tombardier Inc.</span>
+        <span>made with love by JDBH</span>
     </footer>
     <script src="main.js"></script>
 </body>
