--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <nav class="nav-hidden">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="#">Laptops</a></li>
-                <li><a href="#">Phones</a></li>
-                <li><a href="#">Tablets</a></li>
-                <li><a href="#">TVs</a></li>
+                <li><a href="#">Music</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">?</a></li>
+                <li><a href="#">?</a></li>
+                <li><a href="#">?</a></li>
             </ul>
         </nav>
     </header>
