--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=BioRhyme&family=Gravitas+One&family=Monoton&family=Nothing+You+Could+Do&family=Rubik:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Tara HTML Style Guide</title>
 </head>
